<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GuessMusic</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_pass_view">PassView</string>
    <string name="start_game">点击开始游戏</string>
    <string name="login_username">用户名 : </string>
    <string name="login_hint">登陆</string>
    <string name="register_hint">注册</string>
    <string name="login_password">密码 ：    </string>
    <string name="register_username">请输入要注册的用户名</string>
    <string name="register_pwd">请输入密码</string>
    <string name="register_pwd2">请再次输入密码</string>
    <string name="register_btn">注册</string>
    <string name="username">null</string>
    <string name="recharge_hint">请输入要充值的金额</string>
</resources>
