<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.guessmusic.ui.RegisterActivity"
    android:orientation="vertical">

    <EditText
        android:id="@+id/register_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/register_username"/>
    <EditText
        android:id="@+id/register_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/register_pwd"/>
    <EditText
        android:id="@+id/register_pwd_con"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/register_pwd2"/>
    <Button
        android:id="@+id/register_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_btn"/>
</LinearLayout>
